# DIGITS-CNN

./: .gitignore  README.md  data_aug.py  pyproject.toml  split.py
cars/: README.md  allimages.txt  confusions.ipynb  epochs.ipynb
cars/50.25.25/: train.txt
cars/50.25.25/base/: solver.prototxt
cars/50.5.45/: train.txt  val.txt
cars/50.5.45/base/: pred.csv  solver.prototxt
cars/70.15.15/: test.txt  train.txt
cars/70.15.15/base/: README.md
cars/80.10.10/: test.txt
cars/80.10.10/base/: conf.csv  solver.prototxt
cars/90.5.5/: test.txt  train.txt  val.txt
cars/90.5.5/base/: conf.csv  pred.csv  solver.prototxt  train_val.prototxt
cars/architecture-investigations/: architecture.ipynb
cars/architecture-investigations/best/: conf.csv  deploy.prototxt  original.prototxt  pred.csv  train_val.prototxt
cars/data-aug-investigations/: data-aug.ipynb
cars/data-aug-investigations/all-5/: conf.csv  pred.csv  solver.prototxt  train_val.prototxt
cars/data-aug-investigations/all-5-BA6/: conf.csv  pred.csv  solver.prototxt
cars/data-aug-investigations/flipped/: conf.csv  pred.csv  train.txt  train_val.prototxt
cars/data-aug-investigations/rot-1/: conf.csv  pred.csv  solver.prototxt  train.txt  train_val.prototxt
cars/data-aug-investigations/rot-10/: conf.csv  pred.csv  (+2 more)
cars/default-split/: test.txt  train.txt  val.txt
cars/lr-investigations/: lr-50e.ipynb  lr.ipynb
cars/split-investigations/: split.ipynb
cifar100/: README.md
cifar100/unprocessed/: processor.py  test.txt  train.txt
models/: alexnet-template.py
report/: references.bib  report.lyx
(+483 files in other folders)
